--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "phpoffice/phpspreadsheet": "^1.4"
+        "phpoffice/phpspreadsheet": "^1.4",
+        "pusher/pusher-php-server": "^3.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
