--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /node_modules
 /public/hot
 /public/storage
+/public/fonts
 /storage/*.key
 /vendor
 .env
@@ -10,4 +11,5 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 sftp-config.json
+*.sublime-workspace
 excel_files
