--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "vue-template-compiler": "^2.5.22"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.6.3",
+        "font-awesome": "^4.7.0",
         "laravel-echo": "^1.5.2",
         "pusher-js": "^4.3.1"
     }
