--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,7 @@
 {
-    "name": "laravel/laravel",
+    "name": "mind-itl/mind",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
+    "description": "E-school project",
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
