--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^7.1.3",
         "barryvdh/laravel-translation-manager": "^0.5.2",
         "doctrine/dbal": "^2.9",
+        "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
