--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "phpoffice/phpspreadsheet": "^1.4",
-        "pusher/pusher-php-server": "^3.3"
+        "pusher/pusher-php-server": "^3.3",
+        "spatie/laravel-view-models": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
