--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^1.0",
         "phpoffice/phpspreadsheet": "^1.4",
         "pusher/pusher-php-server": "^3.3",
+        "rap2hpoutre/laravel-log-viewer": "^1.1",
         "spatie/laravel-view-models": "^1.1"
     },
     "require-dev": {
