--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
   - npm i
   - php artisan key:generate
   - php artisan migrate
+  - php artisan db:seed
 
 before_script:
   - php artisan serve &
