--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - composer self-update
   - composer install --no-interaction
   - npm i
+  - npm run dev
   - php artisan key:generate
   - php artisan migrate
   - php artisan db:seed
