--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-translation-manager": "^0.5.2",
+        "binarytorch/larecipe": "^1.4",
         "doctrine/dbal": "^2.9",
         "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
