--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@fortawesome/fontawesome-free": "^5.6.3",
         "font-awesome": "^4.7.0",
         "laravel-echo": "^1.5.2",
-        "pusher-js": "^4.3.1"
+        "pusher-js": "^4.3.1",
+        "slick-carousel": "^1.8.1"
     }
 }
